--- a/HQSOFT.Common/src/HQSOFT.Common.Blazor/Pages/Common/HQAssigneds.razor
+++ b/HQSOFT.Common/src/HQSOFT.Common.Blazor/Pages/Common/HQAssigneds.razor
@@ -114,7 +114,7 @@
     </CardBody>
 </Card>
 
-@* ************************* CREATE MODAL ************************* *@
+@* ************************* CREATE MODAL ASSIGNED ************************* *@
 <Modal @ref="CreateHQAssignedModal" Closing="@CreateHQAssignedModal.CancelClosingModalWhenFocusLost">
     <ModalContent Centered="true">
         <Form id="CreateHQAssignedForm">
@@ -247,7 +247,7 @@
     </ModalContent>
 </Modal>
 
-@* ************************* EDIT MODAL ************************* *@
+@* ************************* EDIT MODAL SHARE ************************* *@
 <Modal @ref="EditHQAssignedModal" Closing="@EditHQAssignedModal.CancelClosingModalWhenFocusLost">
     <ModalContent Centered="true">
         <Form id="EditHQAssignedForm">
