--- a/HQSOFT.Common/src/HQSOFT.Common.Web/Pages/Common/HQShares/CreateModal.cshtml
+++ b/HQSOFT.Common/src/HQSOFT.Common.Web/Pages/Common/HQShares/CreateModal.cshtml
@@ -16,8 +16,6 @@
         <abp-modal-header title="@L["NewHQShare"].Value"></abp-modal-header>
 
         <abp-modal-body>
-             <abp-tabs>
-                <abp-tab title="@L["HQShare"].Value">
                     
 
             <abp-input asp-for="HQShare.IDParent"   />
@@ -34,36 +32,16 @@
 
             <abp-input asp-for="HQShare.CanShare"   />
 
-                    
-                </abp-tab>
-                                <abp-tab title="@L["IdentityUsers"].Value">
-                    <div class="input-group multiple mb-3">
-                      <div class="flex-grow-1">
-                        <select id="IdentityUserLookup"
-                                        name="IdentityUserLookup"
-                                        class="form-control"
-                                        style="width: 100%"
-                                        data-value="">
-                        </select>
-                      </div>
-                      <abp-button button-type="Info" id="AddIdentityUserButton" class="text-light">@L["Add"]</abp-button>
-                    </div>
+                    <div class="form-group">
+                <label for="HQShare_IdentityUserId">@L["IdentityUser"]</label>
+                <select id="HQShare_IdentityUserId"
+                        class="custom-select form-control"
+                        name="HQShare.IdentityUserId"
+                        data-value="@Model.HQShare.IdentityUserId" >
+                </select>
+            </div>
 
-                    <abp-row>
-                        <abp-table style="display:none" id="IdentityUserTable">
-                            <thead Theme="Dark">
-                            <tr style="text-align: center; vertical-align: middle;">
-                                <th scope="Column" style="text-align: left">Email</th>
-                                <th scope="Column"></th>
-                            </tr>
-                            </thead>
-                            <tbody id="IdentityUserTableRows">
-                            </tbody>
-                        </abp-table>
-                    </abp-row>
-                 </abp-tab>
-
-            </abp-tabs>
+                
         </abp-modal-body>
 
         <abp-modal-footer buttons="@(AbpModalButtons.Cancel|AbpModalButtons.Save)"></abp-modal-footer>
