--- a/HQSOFT.Common/src/HQSOFT.Common.Web/Pages/Common/HQShares/Index.cshtml
+++ b/HQSOFT.Common/src/HQSOFT.Common.Web/Pages/Common/HQShares/Index.cshtml
@@ -61,16 +61,8 @@
                 <abp-select asp-for="CanShareFilter" label="@L["CanShare"].Value" />
             </abp-column>
             <abp-column size="_3">
-                <div class="mb-3">
-                    <label class="form-label" id-for="IdentityUserFilter">@L["IdentityUser"]</label>
-                    <select id="IdentityUserFilter"
-                            name="IdentityUserFilter"
-                            class="form-control"
-                            style="width: 100%"
-                            data-value="">
-                    </select>
-                </div>
-            </abp-column> 
+                <abp-select asp-for="IdentityUserIdFilter" label="@L["IdentityUser"].Value" />
+            </abp-column>
         </abp-row>
 
         <abp-table striped-rows="true" id="HQSharesTable">
@@ -82,7 +74,7 @@
 					<th>@L["CanWrite"]</th>
 					<th>@L["CanSubmit"]</th>
 					<th>@L["CanShare"]</th>
-
+					<th>@L["IdentityUser"]</th>
 				</tr>
             </thead>
         </abp-table>
